--- a/p8105_hw5_hmz2105.md
+++ b/p8105_hw5_hmz2105.md
@@ -56,3 +56,5 @@ In this spaghetti plot we see that the experimental group had an
 increase in the value measured from week 1 through week 8 while the
 control group showed a slight decrease in the value measured over this
 time period.
+
+## Problem 3
