--- a/p8105_hw5_hmz2105.Rmd
+++ b/p8105_hw5_hmz2105.Rmd
@@ -6,6 +6,7 @@ output: github_document
 
 ```{r setup}
 library (tidyverse)
+set.seed(1234)
 ```
 
 ## Problem 2
@@ -47,4 +48,66 @@ In this spaghetti plot we see that the experimental group had an increase in the
 
 ```{r simulation of ttest}
 
+sim_mean_test = function(n = 30, mu, sigma = 5) {
+  
+  sim_data = tibble(
+    x = rnorm(n, mean = mu, sd = sigma),
+  )
+  
+  result = sim_data %>%
+    summarize(
+      mu_hat = mean(x),
+      p_value = broom::tidy(t.test(x)) |> 
+        pull(p.value) 
+    )
+  
+  return(result)
+}
+
+mu_values <- c(0, 1, 2, 3, 4, 5, 6)
+
+
+sim_results_df = expand_grid(
+  mu = mu_values,
+  dataset = 1:5000
+) |>
+mutate(
+  estimate_df = pmap(list(n = 30, mu = mu, sigma = 5), sim_mean_test)
+) |>
+unnest(estimate_df)
+
 ```
+
+Make a plot showing the proportion of times the null was rejected (the power of the test) on the y axis and the true value of μ on the x axis. Describe the association between effect size and power.
+
+* Make a plot showing the average estimate of μ̂ 
+on the y axis (for all simulations and those where the null was rejected) and the true value of μ on the x axis. 
+
+```{r plot mu}
+
+mu_plot_df= 
+sim_results_df |>
+  group_by(mu) |>
+  summarize(average_mu_hat = mean(mu_hat),
+            average_rejected_mu_hat = mean(mu_hat[p_value < 0.05])
+  )
+
+
+  ggplot(mu_plot_df, aes(x = mu)) +
+  geom_line(aes(y = average_mu_hat, color = "All Simulations")) +
+  geom_point(aes(y = average_mu_hat, color = "All Simulations")) +
+  geom_line(aes(y = average_rejected_mu_hat, color = "Null Rejected")) +
+  geom_point(aes(y = average_rejected_mu_hat, color = "Null Rejected")) +
+  labs(title = "Average Estimate of mu_hat vs. True Value of mu",
+       x = "True Value of mu",
+       y = "Average Estimate of mu_hat") +
+  scale_color_manual(
+    values = c("All Simulations" = "blue", "Null Rejected" = "red"),
+    labels = c("All Simulations", "Null Rejected")
+  ) +
+  theme_minimal()
+```
+
+
+Is the sample average of μ̂  across tests for which the null is rejected approximately equal to the true value of μ
+? Why or why not?
