--- a/p8105_hw5_hmz2105.md
+++ b/p8105_hw5_hmz2105.md
@@ -21,6 +21,105 @@ library (tidyverse)
 set.seed(1234)
 ```
 
+# Problem 1
+
+This problem uses data that the Washington Post gathered on homicides in
+50 large U.S. cities.
+
+``` r
+homicide_df = 
+  read_csv("data_prob1/homicide-data.csv") |>
+    janitor::clean_names() |>
+    mutate(city_state = paste(city, state, sep = ", "))|>
+  filter(city_state != "Tulsa, AL") 
+```
+
+    ## Rows: 52179 Columns: 12
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (9): uid, victim_last, victim_first, victim_race, victim_age, victim_sex...
+    ## dbl (3): reported_date, lat, lon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+The raw data includes year of homicide, homicide victim name, race, age
+and sex, city, state and lat/long of the homicide, and the status of the
+disposition. There are ’r nrow(homicide_df)\` entries. The variable from
+Tulsa AL is likely an error as there is only one entry.
+
+Next will summarize within cities to obtain the total number of
+homicides and the number of unsolved homicides.
+
+``` r
+sum_homicide_df= homicide_df |>
+ group_by(city_state, disposition) |>
+  summarize(total_homicides = n()) |>
+  group_by(city_state) |>
+  mutate(
+    unsolved_homicides = sum(total_homicides[disposition %in% c("Closed without arrest", "Open/No arrest")]),
+    total_homicides = sum(total_homicides)
+  ) %>%
+  ungroup() |>
+   select(city_state, total_homicides, unsolved_homicides) |>
+   distinct(city_state, .keep_all = TRUE)
+```
+
+    ## `summarise()` has grouped output by 'city_state'. You can override using the
+    ## `.groups` argument.
+
+Next will estimate the proportion of homicides that are unsolved from
+Baltimore, MD, along with confidence intervals. These values are shown
+in the table below.
+
+``` r
+bmd_homicide_df = sum_homicide_df|>
+  filter(city_state == "Baltimore, MD") |>
+  summarise(
+    prop_test_result = list(prop.test(unsolved_homicides, total_homicides) |> broom::tidy())
+  ) |>
+  unnest(prop_test_result) |>
+  select(estimate, conf.low, conf.high) 
+
+bmd_homicide_df|> 
+  knitr::kable()
+```
+
+|  estimate |  conf.low | conf.high |
+|----------:|----------:|----------:|
+| 0.6455607 | 0.6275625 | 0.6631599 |
+
+Next estimate the unsolved homicides in every city, using map function.
+
+``` r
+ estimate_homicide_df<- sum_homicide_df |>
+  group_by(city_state) |>
+  summarise(
+    prop_test_result = list(purrr::map2(unsolved_homicides, total_homicides, ~broom::tidy(prop.test(.x, .y))))
+  ) |>
+ unnest(prop_test_result) |>
+   unnest(prop_test_result) |>
+  select(city_state, estimate, conf.low, conf.high)
+```
+
+Make a plot showing the estimate and confidence intervals of the
+proportion of unsolved homicides per city.
+
+``` r
+estimate_homicide_df |>
+  mutate(city_state = fct_reorder(city_state, estimate)) |> 
+  ggplot(aes(x = city_state, y = estimate)) + 
+  geom_point() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
+  theme(axis.text.x = element_text(angle = 65, hjust = 1))
+```
+
+![](p8105_hw5_hmz2105_files/figure-gfm/plot%20homicide%20estimates-1.png)<!-- -->
+
+This plot shows that there is a wide range of unsolved homicides
+throughout the US, with Chicago having the largest proportion of
+unsolved homicides.
+
 # Problem 2
 
 Create a tidy dataframe of this dataset which includes participants
